# ai-engineer

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  ai-engineer-roadmap.md  ai-engineer-study-map.md
00-python/foundation_projects/00-number_analyzer/: functions.py  main.py
00-python/foundation_projects/01-cpf_cnpj_validator/: functions.py  main.py
00-python/foundation_projects/02-cpf_cnpj_validator/: .gitignore  README.md  functions.py  main.py  pyproject.toml
00-python/foundation_projects/03-command-line_calculator/: functions.py  main.py
00-python/oop/: exercicios-python-oop-fundamentos.md
00-python/projects/: README.md
00-python/projects/00-number_analyzer/: functions.py
01-pytest/: AGENTS.md  PROGRESS.md
02-fastapi/: test.py
03-rag/atlas-rag/: main.py
03-rag/simple-rag/: chunks.json  embeddings.py  ingest.py  requirements.txt  test.py
_archive/agents/: AI_AGENTS_ROADMAP.md  README.md
_archive/agents/00-foundations/project-react-agent/: .env.example  pyproject.toml
_archive/agents/01-agent-anatomy/exercises/: 02_typed_tools.py  03_output_guardrail.py
_archive/agents/01-agent-anatomy/project-support-agent/: README.md  pyproject.toml
_archive/agents/01-agent-anatomy/project-support-agent/src/support_agent/: api.py
_archive/agents/02-rag/: README.md
_archive/agents/02-rag/project-agentic-rag/: pyproject.toml
_archive/agents/02-rag/project-agentic-rag/tests/: test_retrieval.py
_archive/agents/03-orchestration-langgraph/exercises/: 03_human_in_loop.py
_archive/agents/03-orchestration-langgraph/framework-comparison/: claude_sdk_agent.py
_archive/agents/03-orchestration-langgraph/project-multi-agent/: pyproject.toml
_archive/agents/03-orchestration-langgraph/project-multi-agent/src/multi_agent/: __init__.py
_archive/agents/04-mcp/exercises/: 02_mcp_client.py
_archive/agents/04-mcp/project-mcp-agent/: README.md
_archive/agents/05-eval-observability/exercises/: 01_langfuse_tracing.py  03_llm_judge.py  04_regression_suite.py
_archive/agents/05-eval-observability/project-eval-pipeline/: README.md  pyproject.toml
_archive/agents/05-eval-observability/project-eval-pipeline/src/eval_pipeline/: judge.py
_archive/agents/06-production-capstone/project-capstone/: .env.example  pyproject.toml
_archive/agents/06-production-capstone/project-capstone/src/capstone/: __init__.py  guardrails.py
_archive/agents/shared/: eval_utils.py  llm_client.py
agents/: .gitignore  main.py
agents/00-foundations/: README.md
agents/00-foundations/exercises/: 01_tool_calling_raw.py  02_structured_output.py  03_retry_backoff.py
agents/00-foundations/project-react-agent/: README.md
agents/00-foundations/project-react-agent/tests/: test_agent.py
agents/01-agent-anatomy/: README.md
agents/01-agent-anatomy/exercises/: 01_persistent_memory.py
agents/01-agent-anatomy/project-support-agent/: .env.example  Dockerfile
agents/01-agent-anatomy/project-support-agent/tests/: test_guardrails.py
agents/02-rag/exercises/: 01_pgvector_index.py  02_hybrid_search.py  03_reranking.py  04_golden_set_eval.py
agents/02-rag/project-agentic-rag/: .env.example  EVAL.md  README.md
agents/03-orchestration-langgraph/: README.md
agents/03-orchestration-langgraph/exercises/: 01_langgraph_basic.py  02_checkpoints.py
agents/03-orchestration-langgraph/framework-comparison/: COMPARISON.md  langgraph_agent.py  pydantic_ai_agent.py
agents/03-orchestration-langgraph/project-multi-agent/: .env.example  README.md
agents/04-mcp/: README.md
agents/04-mcp/exercises/: 01_mcp_server.py  03_rag_as_resource.py
agents/04-mcp/project-mcp-agent/: .env.example  pyproject.toml
agents/04-mcp/project-mcp-agent/src/mcp_agent/: client.py  server.py
agents/05-eval-observability/: README.md
agents/05-eval-observability/exercises/: 02_golden_dataset.py
agents/05-eval-observability/project-eval-pipeline/: .env.example
agents/05-eval-observability/project-eval-pipeline/tests/: test_judge.py
agents/06-production-capstone/: README.md
agents/06-production-capstone/project-capstone/: Dockerfile  README.md  docker-compose.yml
agents/interview-prep/: failure-modes.md  system-design-questions.md  talking-points.md
docs/: README.md  roadmap.md
hf/: test_mlx.py
learning/: README.md
learning/pytest/: AGENTS.md
learning/pytest/project1/: calculator.py  test_calculator.py
roadmaps/: market-update-jun2026.md  roadmap-ai-engineer-pablo-2026.md
(+42 files in other folders)
