[project]
name = "capstone"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # orchestration
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    # LLM + multi-provider
    "anthropic>=0.40.0",
    "litellm>=1.40.0",
    # RAG
    "openai>=1.40.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.0",
    "rank-bm25>=0.2.2",
    "cohere>=5.0",
    # MCP
    "mcp[cli]>=1.0",
    "fastmcp>=0.4",
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # eval + observability
    "langfuse>=2.0",
    # config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"
